# MYKW

./: .gitignore  README.md  需求.txt
ai-konwledge-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
ai-konwledge-backend/data/: long_memory.json  short_memory.json
ai-konwledge-backend/docs/: api_spec.md  architecture.md  deployment.md  knowledge_domains.md
ai-konwledge-backend/scripts/: auto_upgrade_trigger.sh  build_kb.sh  migrate_vectorstore.sh  update_memory.sh
ai-konwledge-backend/src/aipayment_kb_agent/: __main__.py
ai-konwledge-backend/src/aipayment_kb_agent/api/: app.py  dependencies.py
ai-konwledge-backend/src/aipayment_kb_agent/config/: settings.py
ai-konwledge-backend/src/aipayment_kb_agent/core/: agent.py  intent_router.py  prompt.py  state.py
ai-konwledge-backend/src/aipayment_kb_agent/knowledge/: __init__.py  auto_upgrader.py  embeddings.py  loader.py  retriever.py  splitter.py  updater.py  vectorstore.py
ai-konwledge-backend/src/aipayment_kb_agent/knowledge_ingestion/: __init__.py  classifier.py  deduplicator.py  document_generator.py  extractor.py  pipeline.py
ai-konwledge-backend/src/aipayment_kb_agent/memory/: compressor.py  long_term.py  manager.py  retriever.py  short_term.py
ai-konwledge-backend/src/aipayment_kb_agent/models/: __init__.py  request.py  response.py
ai-konwledge-backend/tests/: conftest.py
ai-konwledge-backend/tests/integration/: test_query_api.py
ai-konwledge-backend/tests/unit/: test_splitter.py  test_vectorstore.py
(+34 files in other folders)
